--- a/includes/header.html
+++ b/includes/header.html
@@ -1,49 +1,96 @@
-<!--Navbar --> 
+<!--Navbar ->
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
   <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="index.php">
       <img src="img/logo_fundacion.png" width="70" height="70" alt="">
     </a>
   </nav>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
 
-      <!--Primer item-->
+      <!-Primer item->
       <li class="nav-item">
         <a class="nav-link" href="index.php">Inicio <span class="sr-only"></span></a>
       </li>
 
-      <!--Segundo item-->
+      <!-Segundo item->
       <li class="nav-item">
         <a class="nav-link" href="nosotros.php">¿Quiénes somos?</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="eventos.php">Eventos</a>
       </li>
-      
-      <!--Tercer item-->
+
+      <!-Tercer item->
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
           Blog
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="publicaciones.php">Finanzas en el hogar</a>
-          <!-- <a class="dropdown-item" href="publicaciones.php">Educación en el hogar</a>
-          <a class="dropdown-item" href="publicaciones.php">Problemas en el hogar</a> -->
+          <!- <a class="dropdown-item" href="publicaciones.php">Educación en el hogar</a>
+          <a class="dropdown-item" href="publicaciones.php">Problemas en el hogar</a> ->
         </div>
-      
-      <!--Cuarto item-->
       </li>
+
+        <!-Cuarto item->
       <li class="nav-item">
         <a class="nav-link" href="contacto.php" rel="nofollow">Contacto</a>
       </li>
-          <!-- <li class="nav-item"> 
+      <!- <li class="nav-item"> 
             <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Dona</a>
-          </li>-->
-        </ul>
-      </div>
-    </nav>
-    <!-- Termina navbar
+          </li>->
+    </ul>
+  </div>
+</nav>
+<!- Termina navbar -->
+
+<nav class="navbar navbar-expand-lg navbar-dark oscuro fixed-top scrolling-navbar">
+  <a class="navbar-brand" href="#">
+    <img class="brand-scroll" src="img/logo_fundacion.png" alt="">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <i class="fas fa-bars rounded mb-0"></i>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav d.flex flex-column flex-lg-row justify-content-lg-around">
+      <li id='inicio' class="nav-i nav-item">
+          <a class="nav-link animsition-link" href="index.php"><i
+                  class="fas fa-lg d-inline d-lg-none fa-home mr-3"></i>Inicio</a>
+      </li>
+
+      <li id="nosotros" class="nav-i nav-item">
+          <a class="nav-link animsition-link" href="nosotros.php"><i
+                  class="fas fa-lg d-inline d-lg-none fa-user mr-3"></i>Nosotros</a>
+      </li>
+
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Blog
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="publicaciones.php">Finanzas en el hogar</a>
+              <!--<a class="dropdown-item" href="publicaciones.php">Educación en el hogar</a>
+          <a class="dropdown-item" href="publicaciones.php">Problemas en el hogar</a> -->
+          </div>
+      </li>
+
+      <li id='eventos' class="nav-i nav-item">
+          <a class="nav-link animsition-link" href="eventos.php"><i
+                  class="fas fa-lg d-inline d-lg-none fa-th-list mr-3"></i>Eventos</a>
+      </li>
+
+      <li id='contacto' class="nav-i nav-item">
+          <a class="nav-link animsition-link" href="./contacto.php"><i
+                  class="fas fa-lg d-inline d-lg-none fa-envelope mr-3"></i>Contacto</a>
+      </li>
+  </ul>
+  </div>
+</nav>
