--- a/includes/header-noscroll.html
+++ b/includes/header-noscroll.html
@@ -7,7 +7,7 @@
         <i class="fas fa-bars rounded mb-0"></i>
     </button>
     <div class="noscroll collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav d.flex flex-column flex-lg-row justify-content-lg-around">
+        <ul class="navbar-nav d.flex flex-column flex-lg-row justify-content-around w-100">
             <li id='inicio' class="nav-i nav-item">
                 <a class="nav-link animsition-link" href="index.php"><i
                         class="fas fa-lg d-inline d-lg-none fa-home mr-3"></i>Inicio</a>
@@ -16,6 +16,11 @@
             <li id="nosotros" class="nav-i nav-item">
                 <a class="nav-link animsition-link" href="nosotros.php"><i
                         class="fas fa-lg d-inline d-lg-none fa-user mr-3"></i>Nosotros</a>
+            </li>
+
+            <li id="nosotros" class="nav-i nav-item">
+                <a class="nav-link animsition-link" href="planDeAccion.php"><i
+                        class="fas fa-lg d-inline d-lg-none fa-user mr-3"></i>Plan de acción</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -38,6 +43,11 @@
             <li id='contacto' class="nav-i nav-item">
                 <a class="nav-link animsition-link" href="./contacto.php"><i
                         class="fas fa-lg d-inline d-lg-none fa-envelope mr-3"></i>Contacto</a>
+            </li>
+
+            <li id='donativo' class="nav-i nav-item">
+                <a class="nav-link animsition-link" href="donaciones.php"><i
+                        class="fas fa-lg d-inline d-lg-none fa-envelope mr-3"></i>Donaciones</a>
             </li>
         </ul>
     </div>
