--- a/includes/header-noscroll.html
+++ b/includes/header-noscroll.html
@@ -20,7 +20,7 @@
 
             <li id="nosotros" class="nav-i nav-item">
                 <a class="nav-link animsition-link" href="planDeAccion.php"><i
-                        class="fas fa-lg d-inline d-lg-none fa-user mr-3"></i>Plan de acción</a>
+                        class="fas fa-lg d-inline d-lg-none fa-clipboard mr-3"></i>Plan de acción</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -47,7 +47,7 @@
 
             <li id='donativo' class="nav-i nav-item">
                 <a class="nav-link animsition-link" href="donaciones.php"><i
-                        class="fas fa-lg d-inline d-lg-none fa-envelope mr-3"></i>Donaciones</a>
+                        class="fas fa-lg d-inline d-lg-none fa-hand-holding-usd mr-3"></i>Donaciones</a>
             </li>
         </ul>
     </div>
