--- a/includes/header-noscroll.html
+++ b/includes/header-noscroll.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg white bg-white navbar-light fixed-top wow fadeIn">
-    <a class="navbar-brand navbar-brand-no-scroll" href="#">
+    <a class="navbar-brand navbar-brand-no-scroll" href="index.php">
         <img src="img/logo_fundacion.png" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
