--- a/includes/header.html
+++ b/includes/header.html
@@ -52,7 +52,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark oscuro fixed-top scrolling-navbar">
   <div class="container">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="index.php">
       <img class="brand-scroll" src="img/logo_fundacion.png" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
